--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ organization: freifunk.net
 description: A website that showcases interesting projects, using Angular JS.
 baseurl: "/freifunk-projects"  # the subpath of your site, e.g. /blog
 url: "https://ayushmanwebdeveloper.github.io"  # the base hostname & protocol for your site
-githuburl: "https://github.com/freifunk/projects.freifunk.net-contents"
+githuburl: "https://github.com/freifunk/projects"
 
 chat:
   gsoc:
