--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ _site/
 .jekyll-cache/
 .jekyll-metadata
 vendor
+gems
+specifications
+cache
+extensions
 _projects/*.yaml
 # GitBook rules
 # Node rules:
